# morning_bot

./: .env.example  .gitignore  Makefile  README.md  app.py  choices_records.py  config.py  morning_bot.py  morning_determiner.py  pic_manager.py  pyproject.toml  pytest.ini  requirements.txt  requirenments.txt  sender.py  site_openweathermap.py  site_pixabay.py  switcher.py  temperature_manager.py  test_api.py  tg_chats.py
fetchers/: pic_manager.py  site_pixabay.py  temperature_manager.py
morning_bot/: __init__.py  __main__.py  choices_records.py  config.py  morning_determiner.py  sender.py  switcher.py  tg_chats.py
morning_bot/fetchers/: pic_manager.py  site_openweathermap.py  site_pixabay.py  temperature_manager.py
service/: choices_records.py  sender.py  switcher.py
service/fetchers/: pic_manager.py  site_pixabay.py  temperature_manager.py
tests/: __init__.py  test_api.py
